edsc/collections-collapsed/src/css/collections-collapsed.less
// Mixin
.dark-ccol-action-icon() {
  background: #2c3e50;
  color: #ccd2d6;
  margin-top: 1px;

  &:hover {
    background: darken(#2c3e50, 10%);
  }

  &:first-child {
    margin-top: 0;
  }

  &.button-disabled {
    color: #aaa;
    cursor: default;

    &:hover {
      background: #ddd;
    }
  }

  &.button-active {
    background: #27AE60;
    color: #ffffff;
    &:hover {
      background: darken(#27AE60, 10%);
    }
  }

  &.button-highlighted {
    box-shadow: 0 0 5px #27AE60;
  }

}

@ccols-width: 270px;
@ccols-background: rgba(0, 0, 0, .95);
@ccols-color: #fff;

@ccol-header-background: #292c2d;
@ccol-width: @ccols-width;
@ccol-actions-width: 29px;
@ccol-content-width: @ccol-width - @ccol-actions-width;
@ccol-content-height: @ccol-content-width / 2;
@ccol-header-height: 29px;
@ccol-height: @ccol-header-height + @ccol-content-height;

@flyout-height: @ccol-height;
@flyout-width: @ccol-width;
@flyout-header-background: @ccol-header-background;
@flyout-background: @ccols-background;
@flyout-color: #fff;
@flyout-tooltip-background: #f2c500;
@flyout-tooltip-color: #000;

.ccols * {
  box-sizing: border-box;
  border: 0;
  padding: 0;
  margin: 0;
}

.ccols {
  width: @ccols-width;
  color: @ccols-color;
  background: @ccols-background;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 10pt;
  list-style: none;
  position: relative;
  padding: 0;
  margin: 0;
}

.ccol {
  position: relative;

  h4 {
    font-size: 1em;
  }

  a.icon-button {
    width: @ccol-actions-width;
    height: @ccol-actions-width;
    text-align: center;
    border: 0;
    border-radius: 0;

    &:hover {
      border: 0;
    }
  }

  .badge-collection {
    background: transparent url('../img/collection-icon.png') no-repeat center center;
    background-size: contain;
    display: inline-block;
    height: 16px;
    width: 16px;
  }

  .badge-granule {
    background: transparent url('../img/granule-icon.png') no-repeat center center;
    background-size: contain;
    display: inline-block;
    height: 16px;
    width: 16px;
  }

  .ccol-more {
    float: right;
    color: #fff;
    background: transparent;
    font-size: 1em;
    padding: 0;

    &:hover {
      color: #888;
      background: transparent;
    }
  }
}

.ccol-selectable {
  cursor: pointer;
}

.ccol-title {
  text-overflow: ellipsis;
  display: block;
  margin: 0 2em;
  white-space: nowrap;
  overflow: hidden;

  span {
    vertical-align: top;
  }
}

.ccol-actions-container {
  width: 29px;
  height: 116px;
  background-color: #191a1b;
  right: 0;
  top: 0;
  position: absolute;
  margin-top: 29px;
}

.ccol-header {
  height: @ccol-header-height;
  border-top: 1px solid lighten(@ccol-header-background, 15%);
  background: @ccol-header-background;
  padding: 5px 0 5px 5px;

  .badge-collection {
    float: left;
  }
}

.ccol-mini-map {
  height: @ccol-content-height;
  width: @ccol-content-width;
  background-color: #ed009d;
}

.ccol-actions {
  position: absolute;
  right: 0;
  top: 0;

  .button {
    .dark-ccol-action-icon;
    font-size: 1em;
    padding: 5px 2px 1px 3px;
    display: block;
    border-radius: 0;
  }
}

.flyout {
  position: absolute;
  z-index: -1;
  top: 0;
  left: @ccol-width;
  width: @flyout-width;
  min-height: @flyout-height;
  background: @flyout-background;
  color: @flyout-color;
}

.flyout-content {
  padding-left: 10px;
  font-size: .9em;
}

.flyout-header {
  height: @ccol-header-height;
  padding: 5px;
  background: @flyout-header-background;
  border-top: 1px solid lighten(@flyout-header-background, 15%);

  .flyout-info {
    float: right;
    span {
      vertical-align: top;
    }
  }
}

.flyout-title {
  margin: 0 0 5px;
  font-size: 12px;
  font-weight: bold;
  white-space: normal;
  padding-left: 10px;
}

.flyout-tooltip, .flyout-tooltip-button.flyout-visible:hover {
  background: @flyout-tooltip-background;
}

.flyout-tooltip {
  color: @flyout-tooltip-color;
  padding: .5em 1em;
  min-height: 0;
}

